@@ -2,10 +2,10 @@
 solr.log=logs
 log4j.rootLogger=INFO, file, CONSOLE
 
+# Console appender will be programmatically disabled when Solr is started with option -Dsolr.log.muteconsole
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
-
 log4j.appender.CONSOLE.layout=org.apache.log4j.EnhancedPatternLayout
-log4j.appender.CONSOLE.layout.ConversionPattern=%-4r %-5p (%t) [%X{collection} %X{shard} %X{replica} %X{core}] %c{1.} %m%n
+log4j.appender.CONSOLE.layout.ConversionPattern=%d{yyyy-MM-dd HH:mm:ss.SSS} %-5p (%t) [%X{collection} %X{shard} %X{replica} %X{core}] %c{1.} %m%n
 
 #- size rotation with log cleanup.
 log4j.appender.file=org.apache.log4j.RollingFileAppender
